--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "connect-session-sequelize": "^6.1.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "font-awesome": "^4.7.0",
     "history": "^4.10.1",
     "morgan": "^1.9.1",
     "npm-check-updates": "^4.0.1",
