--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "npm-check-updates": "^4.0.1",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
+    "passport-spotify": "^1.1.0",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "prop-types": "^15.7.2",
